# bike-sharing

./: docker-compose.yml  startup.sh
kafka_2.13-3.4.0/: partitions.json  start-kafka.sh  start-zookeeper.sh
kafka_2.13-3.4.0/logs/: controller.log.2023-04-04-19  controller.log.2023-04-04-20  controller.log.2023-04-04-21  controller.log.2023-04-04-22  controller.log.2023-04-04-23  controller.log.2023-04-05-00  controller.log.2023-04-05-01  controller.log.2023-04-05-02  controller.log.2023-04-05-03  controller.log.2023-04-05-04  controller.log.2023-04-05-05  controller.log.2023-04-05-06  controller.log.2023-04-05-07  kafkaServer-gc.log.0.current  server.log.2023-04-04-19  server.log.2023-04-04-20  zookeeper-gc.log.0.current
purchases-aggregator/: Cargo.toml  Dockerfile
purchases-aggregator-different/: Cargo.toml
purchases-aggregator-different/src/: main.rs
purchases-aggregator/src/: main.rs
purchasing/: Cargo.toml  Dockerfile  test.txt
purchasing/src/: avro-spec.json  main.rs  purchase_request.rs  purchasing_record.rs
purchasing/src/produces/: mod.rs
user-sign-up/: Cargo.toml  Dockerfile
user-sign-up/src/: main.rs  produces.rs
