[package]
name = "purchases-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = {version = "0.14.0", features = ["derive"]}
rdkafka = "0.29.0"
serde = {version = "1.0.159", features=["derive"]}
tokio = {version = "1.27.0", features= ["rt", "time", "macros", "rt-multi-thread"]}
