[package]
name = "purchases-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
apache-avro = {version = "0.14.0", features = ["derive"]}
kafka = "0.9.0"
schema_registry_converter = {version = "3.1.0", default-features=false, features= ["blocking", "avro"]}
serde = {version = "1.0.159", features=["derive"]}
