[package]
name = "purchases-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = {version = "0.14.0", features = ["derive"]}
kafka = "0.9.0"
schema_registry_converter = {version = "3.1.0", features= ["avro"]}
serde = {version = "1.0.159", features=["derive"]}
tokio = {version="1.27.0",features=["macros"]}
