[package]
name = "purchasing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
apache-avro = {version = "0.14.0", features = ["derive"]}
confy = "0.5.1"
env_logger = "0.10.0"
kafka = "0.9.0"
serde = {version = "1.0.159", features=["derive"]}
schema_registry_converter = {version = "3.1.0", default-features=false, features= ["blocking", "avro"]}
